src/components/dark-mode-toggle/dark-mode-toggle.module.scss
@use "../../styles/mixins";

@keyframes spin {
  0% {
    transform: rotate(0deg) scale(1);
    animation-timing-function: ease-in;
  }

  25% {
    transform: rotate(180deg) scale(1.2);
    animation-timing-function: ease-out;
  }

  50% {
    transform: rotate(360deg) scale(1);
    animation-timing-function: linear;
  }

  100% {
    transform: rotate(360deg) scale(1);
  }
}

@keyframes moon-pulse {
  0%,
  100% {
    opacity: 1;
  }

  50% {
    opacity: 0.7;
  }
}

@keyframes twinkle {
  0%,
  100% {
    opacity: 1;
  }

  50% {
    opacity: 0.3;
  }
}

// @TODO: Rework styles to make it more robust
// Now it's extremely fragile. E.g. depends on width of labels
.darkModeToggle {
  position: fixed;
  top: 36px;
  left: max(6px, calc((100vw - 2000px) / 2));
  z-index: 3;
  width: 100px;
  height: 40px;
  overflow: hidden;
  cursor: pointer;
  background-color: var(--background-color);
  border: 2px solid var(--accent-color);
  border-radius: 9999px;
  transition: background-color 400ms, width 400ms;

  @include mixins.mobile {
    right: 6px;
    left: auto;

    @include mixins.scroll-fade;
  }

  .slider {
    position: absolute;
    left: 7px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 135px;
    height: 100%;
    font-weight: 700;
    text-transform: uppercase;
    transform: translateX(-40%);
    transition: transform 400ms;
  }

  .handler {
    position: relative;
    width: 30px;
    height: 30px;

    svg {
      width: 100%;
      height: 100%;
    }
  }

  .labelLight,
  .labelDark {
    padding-top: 1px;
    color: var(--accent-color);
  }

  &:hover {
    .iconLight {
      animation: spin 4s infinite linear;
    }
    
    &.darkModeEnabled {
      .moonBody {
        animation: moon-pulse 4s infinite ease-in-out;
      }

      .star1 {
        animation: twinkle 3s infinite ease-in-out;
      }

      .star2 {
        animation: twinkle 4s infinite ease-in-out 1s;
      }

      .star3 {
        animation: twinkle 5s infinite ease-in-out 2s;
      }
    }
  }

  &.darkModeEnabled {
    width: 96px;
    // border: 2px solid $white-ter;
    box-shadow: 0 0 8px -2px rgb(255 255 255 / 50%);

    .slider {
      transform: translateX(0);
    }

    .iconDark {
      display: block;
      filter: none; // disable global invert
    }

    .iconLight {
      display: none;
    }
  }

  &.compact {
    width: 40px;

    .slider {
      transform: translateX(-56px);
    }
  }
}

